--- a/webchordr/static/stylesheets/components/_modal.scss
+++ b/webchordr/static/stylesheets/components/_modal.scss
@@ -1,7 +1,12 @@
 @import "prelude";
 
 $modal-bg: $gray-light !default;
+$modal-header-bg: $gray !default;
 $modal-padding: $std-space !default;
+$modal-shadow: 0px 1px 3px rgba(0, 0, 0, .23) !default;
+$dark-mode-modal-bg: $gray-darker !default;
+$dark-mode-modal-header-bg: $gray-ultra-dark !default;
+
 .modal-outer {
     z-index: 100;
     position: fixed;
@@ -22,6 +27,10 @@ $modal-padding: $std-space !default;
         max-width: 500px;
         background: $modal-bg;
         padding: $modal-padding;
+        box-shadow: $modal-shadow;
+        @include if-dark-mode {
+            background: $dark-mode-modal-bg;
+        }
     }
 
     .modal-question {
@@ -35,7 +44,10 @@ $modal-padding: $std-space !default;
         flex-flow: row nowrap;
         align-items: center;
         justify-content: space-between;
-        background: $gray;
+        background: $modal-header-bg;
+        @include if-dark-mode {
+            background: $dark-mode-modal-header-bg;
+        }
 
         .modal-header-text {
             padding: 0 $std-space;
